# DDIno

./: .gitattributes  .gitignore  BOM_formatado_atualizado.xlsx  GIT_SYNC_GUIDE.md  Pinagem_Consolidada_Monitor_Aquario_Inteligente (1).xlsx  SRS TÉCNICO CONSOLIDADO FINAL - REV1 (1).docx  SRS TÉCNICO CONSOLIDADO FINAL — MONITOR AQUÁRIO INTELIGENTE.txt  SRS v3.11 COMPLETA — GO CODING READY.txt  ateagora.txt  auditcompliance.txt  auditoria.txt  commit_msg.txt  concatena.ps1  concatena1OK.ps1  concatena20mb.ps1  opencode.jsonc  plano_acao_compliance_98_ddino.txt  plano_acao_compliance_ddino.txt  plano_acao_detalhado_nao_conformidades_ddino.txt  projeto_concatenado_part_01_of_10.txt  projeto_concatenado_part_01_of_15.txt  projeto_concatenado_part_01_of_20.txt  projeto_concatenado_part_02_of_15.txt  projeto_concatenado_part_02_of_20.txt  projeto_concatenado_part_03_of_20.txt  projeto_concatenado_part_05_of_10.txt  projeto_concatenado_part_06_of_10.txt  projeto_concatenado_part_06_of_20.txt  projeto_concatenado_part_07_of_15.txt  projeto_concatenado_part_08_of_10.txt  projeto_concatenado_part_08_of_15.txt  projeto_concatenado_part_08_of_20.txt  projeto_concatenado_part_09_of_15.txt  projeto_concatenado_part_09_of_20.txt  projeto_concatenado_part_11_of_15.txt  projeto_concatenado_part_11_of_20.txt  projeto_concatenado_part_12_of_15.txt  projeto_concatenado_part_12_of_20.txt  projeto_concatenado_part_14_of_20.txt  projeto_concatenado_part_15_of_15.txt  (+18 more)
.github/workflows/: firmware-ci.yml
firmware/: ARCHITECTURE.md  AUDITORIA_SRS.md  CMakeLists.txt  COMPLIANCE_REPORT.md  README_BUILD.md  _run_build.ps1  build.ps1  concatena15.ps1  firmware  partitions.csv  projeto_concatenado_part_01_of_10.txt  projeto_concatenado_part_01_of_15.txt  projeto_concatenado_part_02_of_15.txt  projeto_concatenado_part_05_of_10.txt  projeto_concatenado_part_06_of_10.txt  projeto_concatenado_part_07_of_15.txt  projeto_concatenado_part_08_of_10.txt  run_build.ps1  setup.ps1  temp_requirements_clean.txt  temp_requirements_raw.txt
firmware/core/: circuit_breaker.c  circuit_breaker.h  event_bus.c  global_state.c  safety_controller.c  safety_controller.h
firmware/docs/: ACTION_PLAN_STATUS.md  AC_SAFETY_CHECKLIST.md  ADC_CONDITIONING_SPEC.md  ADENDO_BASELINE_PH_v3.11.md  AF_ERRATAS.md  API_ERROR_CODES.md  AUDITORIA_COMPLIANCE_2026-06-30.md  AUDITORIA_COMPLIANCE_2026-07-01.md  AUDITORIA_COMPLIANCE_REAUDIT_2026-06-30.md  AUDITORIA_COMPLIANCE_RIGOR_2026-06-30.md  AUDITORIA_COMPLIANCE_V3.11.md  AUDIT_SCOPE.md  BOM.md  CODE_INVENTORY.md  COMPLIANCE_FINAL_REPORT.md  COMPLIANCE_REPORT.md  COMPLIANCE_SCOPE.md  CORRECAO_COMPLIANCE_SRS_FINAL.md  DATA_RULES.md  DECISIONS.md  DOC_CLASS.md  ELECTRIC_RULES.md  EXECUCAO_PLANO_COMPLIANCE_2026-06-30.md  FASE_L_PROGRESSO.md  FASE_L_RELATORIO.md  FASE_M_RELATORIO.md  FREERTOS_TASK_MAP.md  GOVERNANCE.md  HARDCODES_RESIDUAIS.md  HARDWARE_APPROVED_DEVKIT.md  OWNERSHIP_AF4.md  PARAMETER_CATALOG.md  PLANO_ACAO_COMPLIANCE_95.md  PROMPT_CORRECAO_COMPLIANCE_FINAL.md  PROMPT_FASE_L_COMPLIANCE.md  QA_PLAN.md  REAUDITORIA_COMPLIANCE_2026-07-01-FINAL.md  REAUDITORIA_COMPLIANCE_2026-07-01.md  RELAY_INTERFACE_SPEC.md  RELAY_RULES.md  (+14 more)
firmware/drivers/: driver_acs712.c  driver_acs712.h  driver_ad_keypad.c  driver_ad_keypad.h  driver_ad_keypad_lvgl.c  driver_ad_keypad_lvgl.h  driver_buzzer_led.c  driver_buzzer_led.h  driver_ds18b20.c  driver_ds18b20.h  driver_ds3231.c  driver_ds3231.h  driver_ili9488.c  driver_ili9488.h  driver_ili9488_sprint.c  driver_mcp23017.c  driver_mcp23017.h  driver_mcp3208.c  driver_mcp3208.h  driver_ph_sensor.c  driver_ph_sensor.h  (+13 more)
firmware/main/: CMakeLists.txt  api_sensors_handler.c  app_main.c  idf_component.yml  log_handler.c  task_web.c  ui_task.c
firmware/main/app/: app_main.c
firmware/main/handler/: api_sensors_handler.c  log_handler.c
firmware/main/task/: task_web.c  ui_task.c
firmware/main/ui/hmi/: ui_app.c  ui_app.h  ui_events.c  ui_events.h  ui_keypad_bridge.c  ui_lvgl_mutex.c  ui_lvgl_mutex.h  ui_preset_picker.c  ui_preset_picker.h  ui_profile_name_editor.c  ui_profile_name_editor.h  ui_screen_manager.c  ui_screen_manager.h  ui_state_machine.c  ui_state_machine.h  ui_status_bar.h  ui_theme.c  ui_theme.h  ui_types.h  ui_view_model.c  ui_view_model.h  ui_watchdog.h
firmware/main/ui/hmi/components/: ui_alert_row.c  ui_alert_row.h  ui_bar_chart.c  ui_bar_chart.h  ui_confirm_dialog.c  ui_confirm_dialog.h  ui_critical_overlay.c  ui_critical_overlay.h  ui_device_row.c  ui_device_row.h  ui_focus.c  ui_focus.h  ui_footer.c  ui_footer.h  ui_inline_hint.c  ui_inline_hint.h  ui_menu_tile.c  ui_menu_tile.h  ui_metric_card.c  ui_metric_card.h  ui_overlay_cause.c  ui_overlay_cause.h  ui_page_indicator.c  ui_page_indicator.h  ui_status_badge.c  ui_status_badge.h  ui_topbar.c  ui_topbar.h
firmware/main/ui/hmi/screens/: screen_calibration.c  screen_submenu.c  ui_screen_alerts.c  ui_screen_alerts.h  ui_screen_ato.c  ui_screen_ato.h  ui_screen_calibration.c  ui_screen_calibration.h  ui_screen_carousel_settings.c  ui_screen_carousel_settings.h  ui_screen_config_hub.c  ui_screen_config_hub.h  ui_screen_config_temperature.c  ui_screen_config_temperature.h  ui_screen_dashboard.c  ui_screen_dashboard.h  ui_screen_devices_page1.c  ui_screen_devices_page1.h  ui_screen_devices_page2.c  ui_screen_devices_page2.h  ui_screen_diag_detail.c  ui_screen_diag_detail.h  ui_screen_diagnostics.c  ui_screen_diagnostics.h  ui_screen_energy.c  ui_screen_energy.h  ui_screen_feed_active.c  ui_screen_feed_active.h  ui_screen_logs.c  ui_screen_logs.h  ui_screen_main_menu.c  ui_screen_main_menu.h  ui_screen_profiles.c  ui_screen_profiles.h  ui_screen_system.c  ui_screen_system.h  ui_screen_wizard.c  ui_screen_wizard.h
firmware/test/: CMakeLists.txt  test_alert.c  test_alm_monitor.c  test_ato.c  test_audit_log_no_sd.c  test_circuit_breaker.c  test_command_validator.c  test_electric.c  test_feed.c  test_pinmap.c  test_plug_manager.c  test_relay_safety.c  test_safe_state_ack.c  test_safety.c  test_safety_audit_trail.c  test_temp_filter.c  test_thermal.c  test_thermal_service.c  test_web_state.c
(+183 files in other folders)
