set(MAIN_SRCS
    "app_main.c"
    "../hal/hal_bus.c"
    "../drivers/driver_mcp23017.c"
    "../drivers/driver_relay.c"
    "../drivers/driver_mcp3208.c"
    "../drivers/driver_acs712.c"
    "../drivers/driver_ad_keypad.c"
    "../drivers/driver_pzem.c"
    "../drivers/driver_ds18b20.c"
    "../drivers/driver_ds3231.c"
    "../drivers/driver_buzzer_led.c"
    "../core/safety_controller.c"
    "../services/command_validator.c"
    "../services/safeoff_alm_map.c"
    "../services/alert_manager.c"
    "../services/relay_safety_service.c"
    "../services/electric_fsm.c"
    "../services/storage_sd.c"
    "../fsm/thermal_fsm.c"
    "../fsm/ato_fsm.c"
    "../fsm/restart_fsm.c"
    "../web/api_rest.c"
    "../web/api_auth.c"
    "../web/api_rate_limit.c"
    "../ui/ui_display.c"
    "../ui/ui_touch.c"
    "../ui/ui_keypad.c"
    "../ui/ui_screens.c"
    "../ui/ui_state_badge.c"
    "../ui/screens/screen_dashboard.c"
    "../ui/screens/screen_devices1.c"
    "../ui/screens/screen_devices2.c"
    "../ui/screens/screen_energy.c"
    "../ui/screens/screen_menu.c"
    "../ui/screens/screen_submenu.c"
    "../ui/screens/screen_alerts.c"
    "../core/circuit_breaker.c"
    "../services/self_test.c"
    "../services/wdt_advanced.c"
    "../services/cdn_energy.c"
    "../services/config_manager.c"
    "../services/temp_filter.c"
    "../services/audit_log.c"
    "../services/plug_manager.c"
    "../services/feed_snapshot.c"
    "../fsm/feed_fsm.c"
    "../ui/screens/screen_diagnostic.c"
    "../ui/screens/screen_calibration.c"
    "../services/reset_handler.c"
    "../ui/ui_header.c"
    "../ui/ui_footer.c"
)

set(MAIN_INCLUDE_DIRS
    "."
    ".."
    "../include"
    "../hal"
    "../drivers"
    "../core"
    "../services"
    "../fsm"
    "../web"
    "../ui"
)

idf_component_register(
    SRCS ${MAIN_SRCS}
    INCLUDE_DIRS ${MAIN_INCLUDE_DIRS}
)
