set(MAIN_SRCS
    "app_main.c"
    "../hal/hal_bus.c"
    "../drivers/driver_mcp23017.c"
    "../drivers/driver_relay.c"
    "../drivers/driver_mcp3208.c"
    "../drivers/driver_acs712.c"
    "../drivers/driver_ad_keypad.c"
    "../drivers/driver_pzem.c"
    "../drivers/driver_ds18b20.c"
    "../drivers/driver_ds3231.c"
    "../drivers/driver_buzzer_led.c"
    "../core/safety_controller.c"
    "../core/global_state.c"
    "../services/command_validator.c"
    "../services/safeoff_alm_map.c"
    "../services/alert_manager.c"
    "../services/relay_safety_service.c"
    "../services/electric_fsm.c"
    "../services/storage_sd.c"
    "../fsm/thermal_fsm.c"
    "../fsm/ato_fsm.c"
    "../fsm/restart_fsm.c"
    "../web/api_rest.c"
    "../web/api_auth.c"
    "../web/api_rate_limit.c"
    "../ui/ui_display.c"
    "../ui/ui_touch.c"
    "../ui/ui_keypad.c"
    "../ui/ui_screens.c"
    "../ui/ui_state_badge.c"
    "../ui/screens/screen_dashboard.c"
    "../ui/screens/screen_devices1.c"
    "../ui/screens/screen_devices2.c"
    "../ui/screens/screen_energy.c"
    "../ui/screens/screen_menu.c"
    "../ui/screens/screen_submenu.c"
    "../ui/screens/screen_alerts.c"
    "../core/circuit_breaker.c"
    "../services/self_test.c"
    "../services/wdt_advanced.c"
    "../services/cdn_energy.c"
    "../services/config_manager.c"
    "../services/temp_filter.c"
    "../services/audit_log.c"
    "../services/plug_manager.c"
    "../services/feed_snapshot.c"
    "../fsm/feed_fsm.c"
    "../ui/screens/screen_diagnostic.c"
    "../ui/screens/screen_calibration.c"
    "../services/reset_handler.c"
    "../ui/ui_header.c"
    "../ui/ui_footer.c"

    # Epic 1 — P0 modules
    "../services/storage_manager.c"
    "../core/event_bus.c"
    "../drivers/relay_abstraction.c"
    "../services/health_matrix.c"

    # Epic 2 — Truly-Missing modules
    "../services/util_ctl.c"
    "../services/wifi_ctl.c"
    "../services/sensor_ctl.c"
    "../services/disp_ctl.c"
    "../services/log_ctl.c"
    "../services/conf_ctl.c"
    "../services/web_ctl.c"
    "../services/alm_ctl.c"
    "../services/bom_ctl.c"
    "../services/data_ctl.c"

    # P0-005 — Canonical service modules
    "../services/thermal_service.c"
    "../services/ato_service.c"
    "../services/electric_service.c"
    "../services/time_manager.c"
    "../services/pending_actions.c"
    "../services/task_manager.c"
    "../services/watchdog_guard.c"
    "../hal/hal_spi.c"
    "../security/sec_policy.c"

    # HMI refatorada
    "ui/hmi/ui_theme.c"
    "ui/hmi/ui_view_model.c"
    "ui/hmi/ui_events.c"
    "ui/hmi/ui_state_machine.c"
    "ui/hmi/ui_screen_manager.c"
    "ui/hmi/ui_app.c"
    "ui/hmi/components/ui_topbar.c"
    "ui/hmi/components/ui_footer.c"
    "ui/hmi/components/ui_page_indicator.c"
    "ui/hmi/components/ui_status_badge.c"
    "ui/hmi/components/ui_metric_card.c"
    "ui/hmi/components/ui_device_row.c"
    "ui/hmi/components/ui_alert_row.c"
    "ui/hmi/components/ui_menu_tile.c"
    "ui/hmi/components/ui_confirm_dialog.c"
    "ui/hmi/components/ui_bar_chart.c"
    "ui/hmi/components/ui_focus.c"
    "ui/hmi/components/ui_critical_overlay.c"
    "ui/hmi/screens/ui_screen_dashboard.c"
    "ui/hmi/screens/ui_screen_devices_page1.c"
    "ui/hmi/screens/ui_screen_devices_page2.c"
    "ui/hmi/screens/ui_screen_energy.c"
    "ui/hmi/screens/ui_screen_main_menu.c"
    "ui/hmi/screens/ui_screen_config_temperature.c"
    "ui/hmi/screens/ui_screen_alerts.c"
    "ui/hmi/screens/ui_screen_feed_active.c"
    "ui/hmi/screens/ui_screen_diagnostics.c"
    "ui/hmi/screens/ui_screen_system.c"
    "ui/hmi/screens/ui_screen_logs.c"
    "ui/hmi/screens/ui_screen_wizard.c"
)

set(MAIN_INCLUDE_DIRS
    "."
    ".."
    "../include"
    "../hal"
    "../drivers"
    "../core"
    "../services"
    "../fsm"
    "../web"
    "../ui"
    "../security"
    "ui/hmi"
    "ui/hmi/components"
    "ui/hmi/screens"
)

idf_component_register(
    SRCS ${MAIN_SRCS}
    INCLUDE_DIRS ${MAIN_INCLUDE_DIRS}
)

target_compile_options(${COMPONENT_LIB} PRIVATE -Wall -Wextra -Werror)
